--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -167,8 +167,8 @@
     <string name="background_service_broadcast_data_path">ca.pkay.rcexplorer.BACKGROUND_SERVICE_BROADCAST_DATA_PATH</string>
     <string name="background_service_broadcast_data_path2">ca.pkay.rcexplorer.BACKGROUND_SERVICE_BROADCAST_DATA_PATH2</string>
     <string name="background_service_notification_channel_description">Background service for possibly long running tasks like Move and Delete</string>
-    <string name="moving_info">Moving...</string>
-    <string name="deleting_info">Deleting...</string>
+    <string name="moving_info">Moving…</string>
+    <string name="deleting_info">Deleting…</string>
     <string name="operation_failed">Operation failed</string>
     <string name="moving_service">Moving Service</string>
     <string name="delete_service">Delete Service</string>
@@ -179,8 +179,16 @@
     <string name="nothing_selected">Nothing selected</string>
     <string name="file_picker_root_title">Device storage</string>
     <string name="remote_name_hint">Remote name</string>
-    <string name="box_client_id_hint">Box App Client ID - leave blank normally</string>
-    <string name="box_client_secret_hint">Box App Client Secret - leave blank normally</string>
+    <string name="box_client_id_hint">Box App Client ID</string>
+    <string name="box_client_secret_hint">Box App Client Secret</string>
+    <string name="dropbox_client_id_hint">DropBox App Client ID</string>
+    <string name="dropbox_client_secret_hint">DropBox App Client Secret</string>
     <string name="next_capital">NEXT</string>
     <string name="remote_name_cannot_be_empty">Remote name can\'t be empty</string>
+    <string name="waiting_for_code">Waiting for code</string>
+    <string name="open_browser">Open browser</string>
+    <string name="cancel_caps">CANCEL</string>
+    <string name="next_caps">NEXT</string>
+    <string name="provider_box">Box</string>
+    <string name="provider_dropbox">DropBox</string>
 </resources>
