--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -197,4 +197,8 @@
     <string name="required_field">Required field</string>
     <string name="auth_server_url_hint">Auth server URL</string>
     <string name="token_server_url_hint">Token server URL</string>
+    <string name="provider_b2">Backblaze B2</string>
+    <string name="account_id_hint">Account ID</string>
+    <string name="application_key_hint">Application key</string>
+    <string name="endpoint_hint">Endpoint for the service</string>
 </resources>
