--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -201,4 +201,9 @@
     <string name="account_id_hint">Account ID</string>
     <string name="application_key_hint">Application key</string>
     <string name="endpoint_hint">Endpoint for the service</string>
+    <string name="ftp_host_hint">FTP host to connect to</string>
+    <string name="ftp_user_hint">FTP username</string>
+    <string name="ftp_port_hint">FTP port</string>
+    <string name="ftp_pass_hint">FTP password</string>
+    <string name="provider_ftp">FTP</string>
 </resources>
