--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -206,4 +206,6 @@
     <string name="ftp_port_hint">FTP port</string>
     <string name="ftp_pass_hint">FTP password</string>
     <string name="provider_ftp">FTP</string>
+    <string name="provider_http">HTTP</string>
+    <string name="url_hint">URL of http host to connect to</string>
 </resources>
