--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -208,4 +208,7 @@
     <string name="provider_ftp">FTP</string>
     <string name="provider_http">HTTP</string>
     <string name="url_hint">URL of http host to connect to</string>
+    <string name="hubic_client_id_hint">Hubic Client ID</string>
+    <string name="hubic_client_secret_hint">Hubic Client Secret</string>
+    <string name="provider_hubic">Hubic</string>
 </resources>
