--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -238,4 +238,9 @@
     <string name="onedrive_account_type">OneDrive account type</string>
     <string name="personal_account_type">Personal account</string>
     <string name="business_account_type">Business account</string>
+    <string name="alias_remote_hint">Click to select remote or path to alias</string>
+    <string name="remote_cannot_be_empty">Remote can\'t be empty</string>
+    <string name="provider_alias">Alias</string>
+    <string name="select_remote">Select a remote</string>
+    <string name="select_path_to_alias">Select path to Alias</string>
 </resources>
