--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="remotes">Remotes</string>
     <string name="settings">Settings</string>
     <string name="import_rclone_config">Import rclone config</string>
+    <string name="export_rclone_config">Export rclone config</string>
     <string name="about">About</string>
     <string name="sort">Sort</string>
     <string name="select_all">Select all</string>
@@ -264,4 +265,6 @@
     <string name="azureblob_key_hint">Storage Account Key</string>
     <string name="provider_azureblob">Microsoft Azure Blob Storage</string>
     <string name="no_remotes">There are no remotes</string>
+    <string name="choose_dir">Choose directory</string>
+    <string name="error_exporting_config_file">Error exporting config file</string>
 </resources>
