--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,6 +141,7 @@
     <string name="pref_key_color_primary">pref_key_color_primary</string>
     <string name="pref_key_color_accent">pref_key_color_accent</string>
     <string name="pref_key_dark_theme">pref_key_dark_theme</string>
+    <string name="pref_key_app_updates">pref_key_app_updates</string>
     <string name="pref_key_version_code">pref_key_version_code</string>
     <string name="look_and_feel">Look and Feel</string>
     <string name="primary_color_content_desc">Primary color</string>
@@ -267,4 +268,8 @@
     <string name="no_remotes">There are no remotes</string>
     <string name="choose_dir">Choose directory</string>
     <string name="error_exporting_config_file">Error exporting config file</string>
+    <string name="firebase_msg_app_updates_topic">app_updates</string>
+    <string name="app_update_notification_title">New version of Rclone Explorer is available on GitHub</string>
+    <string name="app_updates_notifications">Get notified about app updates</string>
+    <string name="app_updates_icon_content_description">App updates icon</string>
 </resources>
